Implemented first version of algorithm batch processing (#947).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3226 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProbabilisticQualityComparator.cs" />
+    <Compile Include="ResultsCollector.cs" />
     <Compile Include="SquareRootDiscreteDoubleValueModifier.cs" />
     <Compile Include="DiscreteDoubleValueModifier.cs" />
     <Compile Include="ExponentialDiscreteDoubleValueModifier.cs" />
