added !AsynchronousContentView (ticket #953)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3227 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
@@ -85,6 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionUserInterfaceItem.cs" />
+    <Compile Include="AsynchronousContentView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AsynchronousContentView.Designer.cs">
+      <DependentUpon>AsynchronousContentView.cs</DependentUpon>
+    </Compile>
     <Compile Include="ContentView.cs">
       <SubType>UserControl</SubType>
     </Compile>
