Updated inversion moves to respect different types of permutation #889
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3233 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.PermutationEncoding/3.3/HeuristicLab.Encodings.PermutationEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.PermutationEncoding/3.3/HeuristicLab.Encodings.PermutationEncoding-3.3.csproj
@@ -123,9 +123,10 @@
     <Compile Include="Moves\TwoIndexMove.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Moves\TwoOpt\InversionMoveAbsoluteAttribute.cs" />
     <Compile Include="Moves\TwoOpt\ExhaustiveInversionMoveGenerator.cs" />
     <Compile Include="Moves\TwoOpt\InversionMove.cs" />
-    <Compile Include="Moves\TwoOpt\InversionMoveAttribute.cs" />
+    <Compile Include="Moves\TwoOpt\InversionMoveRelativeAttribute.cs" />
     <Compile Include="Moves\TwoOpt\InversionMoveGenerator.cs" />
     <Compile Include="Moves\TwoOpt\InversionMoveMaker.cs" />
     <Compile Include="Moves\TwoOpt\InversionMoveTabuMaker.cs" />
