Added another visualizer that displays the symbolic expression tree of the best artificial ant solution. #952 (Artificial Ant Problem for 3.3)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3245 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.ArtificialAnt/3.3/HeuristicLab.Problems.ArtificialAnt-3.3.csproj
+++ b/sources/HeuristicLab.Problems.ArtificialAnt/3.3/HeuristicLab.Problems.ArtificialAnt-3.3.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="AntInterpreter.cs" />
     <Compile Include="BestAntTrailVisualizer.cs" />
+    <Compile Include="BestSymbolicExpressionTreeVisualizer.cs" />
     <Compile Include="HeuristicLabProblemsArtificialAntPlugin.cs" />
     <Compile Include="IAntTrailVisualizer.cs" />
     <Compile Include="Evaluator.cs" />
